Fix note overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,6 +375,7 @@ h3 {
     padding-left: 140px;
     font-family: "Courier New", Courier, monospace;
     font-size: 18px;
+    overflow: scroll;
 }
 
 .note > .content {
